<resources>
    <string name="app_name">Atópate</string>
    <string name="app_init">Conéctate a tu dispositivo OBD II para comenzar el registro de un nuevo trayecto</string>
    <string name="app_horas">HACE 5 HORAS</string>
    <string name="app_destino">A Coruña - Madrid</string>
    <string name="app_horas_5">5h 18 min</string>
    <string name="app_resumen">591 km - 37.5 litros</string>
    <string name="app_atopate">ATÓPATE</string>
    <string name="app_compartir">COMPARTIR</string>
    <string name="app_semana">Esta semana</string>
    <string name="app_horas_semana">10h 18 min</string>
    <string name="app_horas_3">3 h</string>
    <string name="app_horas_2">2 h</string>
    <string name="app_verMas">VER MÁS</string>
    <string name="app_photo">Foto</string>
    <string name="app_duracion">Duración</string>

    <string name="app_registrar"> Registrando trayecto&#8230; </string>
    <string name="app_trayecto">VER TRAYECTO ACTUAL</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_trayecto">Trayecto</string>
    <string name="title_activity_historial">Historial</string>
    <string name="title_home">Home</string>
    <string name="title_atopate">Atópate</string>
    <string name="title_resumen">Resumen</string>
    <string name="title_historicos">Históricos</string>
    <string name="title_ajustes">Ajustes</string>
    <string name="location_direccionMock">55 km</string>
    <string name="location_destino">1h 50 min</string>
    <string name="title_activity_prueba">ActivityPrueba</string>
    <string name="statistics">Estadísticas</string>
    <string name="period">Periodo</string>
    <string name="title_activity_ajustes">Ajustes</string>
    <string name="ajustes">Ajustes</string>
    <string name="cargando_text">Cargando\&#8230;</string>
    <string name="title_ruta">Punto de partida</string>
    <string name="direccion_ruta">Ahora en:</string>
    <string name="sin_punto_de_partida">Aún no has empezado un trayecto</string>
    <string name="regreso_a_coche">Fijando ruta de regreso a tu vehículo</string>
    <string name="no_hay_posicion_de_coche">No se tiene la posición del vehículo</string>
    <string name="trayecto_en_curso">No puedes borrar mientras tengas un trayecto en curso</string>

    <!-- String del tema -->
    <string name="tema_oscuro">Oscuro</string>
    <string name="tema_claro">Claro</string>
    <string name="tema_visual_text">Tema Visual</string>
    <string name="indicador_tema">Selecciona un tema</string>
    <string-array name="temas_array">
        <item>@string/indicador_tema</item>
        <item>@string/tema_claro</item>
        <item>@string/tema_oscuro</item>
    </string-array>

    <!-- String de unidad -->
    <string name="unidad_text">Unidad de distancia</string>
    <string-array name="unidad_array">
        <item>Kilómetro</item>
        <item>Milla</item>
    </string-array>

    <!-- Strings de ajustes -->
    <string name="exportar_text">Exportar copia de seguridad</string>
    <string name="importar_text">Importar copia de seguridad</string>
    <string name="eliminar_text">Eliminar registros</string>

    <!--Strings del OBD-->
    <string name="bluetooth_without_available_devices">No hay dispositivos reconocidos al alcance del bluetooth</string>
    <string name="obd_not_found">Es necesario establecer conexion con el OBD antes</string>
    <string name="obd_not_available">El dispositivo OBD2 no esta disponible para conectarse</string>
    <string name="obd_reconnect">Es necesario reconectarse al dispositivo OBD</string>
    <string name="obd_running_vehicle_mandatory">Es necesario que el vehículo se encuentre arrancado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
