<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo_ajustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ajustes"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cabecera_tema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/tema_visual_text"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_tema"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/temas_array"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cabecera_unidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/unidad_text"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_unidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/unidad_array"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:padding="8pt"
                android:paddingLeft="8pt"
                android:paddingRight="8pt">

                <Button
                    android:id="@+id/btnAddTrayecto"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="28pt"
                    android:onClick="onAddTrayectoClick"
                    android:text="Crear trayecto de prueba" />

                <Button
                    android:id="@+id/btnExportar"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="28pt"
                    android:onClick="onExportarClick"
                    android:text="@string/exportar_text" />


                <Button
                    android:id="@+id/btnImportar"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="28pt"
                    android:text="@string/importar_text" />

                <Button
                    android:id="@+id/btnEliminar"
                    style="@style/AppButtonDanger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="24pt"
                    android:onClick="onEliminarClick"
                    android:text="@string/eliminar_text" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

</ScrollView>